--- a/Jherimy.html
+++ b/Jherimy.html
@@ -7,6 +7,7 @@
 <title>simple Portfolio</title>
 <link rel="stylesheet" href="Jherimy.css">
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
 <header class="header">
@@ -14,7 +15,7 @@
     <a href="#" class="logo"><span>J</span>herimy</a>
     <nav class="navbar">
         <a href="#" class="active">Portfolio</a>
-        <a href="#">Services</a>
+        <a href="#services">Services</a> 
         <a href="#">Experience</a>
         <a href="#">Projects</a>
         <a href="#">Education</a>
@@ -40,7 +41,7 @@
             </div>
         </div>
            <div class="img-box">
-           <img src ="img/Profile.png">
+           <img src ="img/img 18.jpg">
 </section>
     
 <section class="about">
@@ -57,7 +58,50 @@
 
 </div>
 </section>
+<section class="Services">
+    <h2 class="heading">My <span>Services</span></h2>
+    <div class="service-container">
+        <a href="#" class="service">
+            <img src="img/img 8.png" alt="Service Image">
+            <h3>Web Design</h3>
+            <p>Creating visually appealling  and user-friendly website design</p>
 
+</a>
+
+<a href="#" class="service">
+    <img src="img/img 6.jpg" alt="Service 2">
+    <h3>Frontend development</h3>
+    <p>Developing interactive and responsive frontend solutions using cutting-edge technologies</p>
+
+</a>
+<a href="#" class="service">
+    <img src="img/img 9.jpg" alt="Service 3">
+    <h3>UI/UX Design</h3>
+    <p>Designing intuitive user interfaces and engaging user experiences to enhance usability.</p>
+
+</a>
+<a href="#" class="service">
+    <img src="img/img 12.png" alt="Service 4">
+    <h3>Mobile App Development</h3>
+    <p>Building innovative and feature-rich mobile applications for various platforms.</p>
+
+</a>
+<a href="#" class="service">
+    <img src="img/img 13.jpg" alt="Service 5">
+    <h3>Graphic Design</h3>
+    <p>Providing custom graphics, including logos, illustrations, and branding materials, to visually elevate your brand</p>
+
+</a>
+<a href="#" class="service">
+    <img src="img/img 16.png" alt="Service 6">
+    <h3>User Testing and Feedback Analysis</h3>
+    <p>Offer user testing and feedback analysis services to help clients optimize their websites and applications for usability and user satisfaction. </p>
+
+</a>
+
+
+
+</section>
 
 <section class="contact-form">
     <h2 class="contact-me">Contact <span>me</span></h2>
@@ -67,7 +111,7 @@
             <input type="text" placeholder="Full Name">
             <input type="email" placeholder="Email">
             <input type="number" placeholder="Phone Number">
-            <input type="text" placeholder="Subject">
+      
             <textarea placeholder="Your message here "></textarea>
         </div>
 
