--- a/Jherimy.html
+++ b/Jherimy.html
@@ -28,7 +28,7 @@
     <div class="home-content">
          <h3>Hi,</h3>
 
-         <h1> I'm <span>Jherimy Mallorca<br></span>a Frontend Developer
+         <h1> ako ayy<span>Jherimy Mallorca<br></span>a Frontend Developer
         </h1>
 
          <p> I am a frontend developer deeply passionate about crafting immersive digital experiences that captivate and engage users. 
