--- a/Jherimy.html
+++ b/Jherimy.html
@@ -28,7 +28,7 @@
     <div class="home-content">
          <h3>Hi,</h3>
 
-         <h1> ako ayy<span>Jherimy Mallorca<br></span>a Frontend Developer
+         <h1> I'm <span>Jherimy Mallorca<br></span>a Frontend Developer
         </h1>
 
          <p> I am a frontend developer deeply passionate about crafting immersive digital experiences that captivate and engage users. 
@@ -101,6 +101,18 @@
 
 
 
+</section>
+
+<section class="education">
+    <h2 class="heading">My <span>Education</span></h2>
+    <div class="service-container">
+        <a href="#" class="service">
+            <img src="img/computer hardware.png" alt="Certificate Image">
+            <h3>Bachelor's in Computer Science</h3>
+            <p>University Name, Year of Graduation</p>
+        </a>
+        <!-- Add more education details here -->
+    </div>
 </section>
 
 <section class="contact-form">
