--- a/Jherimy.html
+++ b/Jherimy.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>simple Portfolio</title>
 <link rel="stylesheet" href="Jherimy.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -101,19 +102,20 @@
 
 
 
-</section>
-
-<section class="education">
+<section class="education" id="education">
     <h2 class="heading">My <span>Education</span></h2>
     <div class="service-container">
-        <a href="#" class="service">
+        <div class="service">
             <img src="img/computer hardware.png" alt="Certificate Image">
             <h3>Bachelor's in Computer Science</h3>
             <p>University Name, Year of Graduation</p>
-        </a>
-        <!-- Add more education details here -->
+        </div>
+        
+      
     </div>
 </section>
+
+
 
 <section class="contact-form">
     <h2 class="contact-me">Contact <span>me</span></h2>
@@ -146,6 +148,6 @@
 
 <script src="script.js"></script>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
 </html>
